02C - Criação de objetos na prática